// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<App /> displays Hello $name when a name prop is passed 1`] = `
<div>
  <div>
    Hello 
    Eric
    !
  </div>
</div>
`;

exports[`<App /> displays Hello World if no name prop is passed 1`] = `
<div>
  <div>
    Hello 
    world
    !
  </div>
</div>
`;
